# Polygon-Boolean-Operations

./: CMakeLists.txt  README.md  booleanops.cpp  booleanops.h  canvas2d.cpp  canvas2d.h  geometrymodel.cpp  geometrymodel.h  inputpolygon.cpp  inputpolygon.h  main.cpp  mainwindow.cpp  mainwindow.h
